--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,367 @@
-.App {
+
+
+body{
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  color: #333;
+ /* background-color: #f4f4f4;*/
+ background: linear-gradient(to bottom right, rgb(33, 32, 32), rgb(83, 80, 80)); 
+  margin: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  /*padding: 20px;*/
+  
+ 
+  
+}
+
+.uno{
+ 
+  width: 80%;
+  margin: auto;
+  background: linear-gradient(to bottom right, rgb(253, 117, 13), rgb(235, 170, 95)); 
+    /*background: rgb(220, 217, 213);*/
+  padding: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
+  margin-top: 35px;
+  border-radius: 18px;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.titulo{
+  color: white;
+  font-size: 50px;
+  font-style: italic;
+  writing-mode: horizontal-tb;
+  border-block-end: 5px dashed blue;
+ 
+ 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.titulo1{
+  color: #f0461c;
+  font-size: 30px;
+  font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+  margin-top: 70px;
+
+}
+
+.titulo2 {
+  writing-mode: horizontal-tb;
+  border-block-end: 5px dashed blue;
+  color: rgb(205, 226, 15);
+  margin-top: 25px;
+  font-style: arial;
+  font-size: 25px;
+}
+ h1{
+  font-size: 50px;
+  background: linear-gradient(#1497be, #821cf0);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  animation: text 5s linear infinite;
+ }
+
+ @keyframes text{
+  0%
+  {
+    filter: hue-rotate(0deg);
   }
+  100%{
+    filter: hue-rotate(360deg);
+  }
+ }
+
+ h2{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 25px;
+  color: rgb(231, 231, 212);
+ }
+
+h2, h3, h1{
+  
+  font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h3{
+  color: #f1f1f8;
+  font-size: 20px;
+  margin-top: 95px;
+}
+
+
+
+
+.imagen1{
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  margin: 20px auto;
+  display: block;
+  border: 2px solid #e1850b;
+ 
+  
+
+}
+
+
+
+
+/* QUIEN SOY */
+
+  .quienSoy{
+    margin: 0 auto;
+    padding: 0 20px;
+
+   /*background: rgb(198, 192, 192);*/
+    border-radius: 10px;
+    padding: 40px;
+     
+  }
+
+
+ 
+  
+
+.yo {
+  
+  
+  width: 80%;
+  margin: auto;
+ color: rgb(228, 234, 238);
+ font-size: 30px;
+  padding: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+  margin-top: 15px;
+   
+}
+
+
+.imgFondo{
+  width: 10%;
+  height: auto;
+  object-fit: cover;
+  object-position: bottom;
+ 
+  border-radius: 35px 0px 35px 0px; 
+  -moz-border-radius: 35px 0px 35px 0px; 
+  -webkit-border-radius: 35px 0px 35px 0px; 
+  border: 2px solid #a8a8ab;
+  margin-left: 10%;
+  margin-top: 20px;
+}
+
+/* PROYECTOS */
+
+
+
+
+/* Estilo base para el contenedor de proyectos */
+.projects-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.projetTitulo{
+ margin-left: 80px;
+ padding: 35px;
+ color: bisque;
+ font-size: 30px;
+
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Estilo base para cada proyecto */
+.project {
+  border: 2px solid #007BFF;
+  border-radius: 8px;
+  padding: 20px;
+  margin: 10px;
+  width: 90%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.titProyect{
+  color: rgb(114, 96, 233);
+  font-size: 30px;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.project h2, a{
+  color: #007BFF;
+}
+
+.project p {
+  color: #fbf3f3;
+}
+
+.project-image {
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+}
+
+.ref a{
+  color: chartreuse;
+}
+
+
+
+/* Media queries para ajustar el diseño en pantallas más grandes */
+@media (min-width: 600px) {
+  .projects-container {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
   }
-  to {
-    transform: rotate(360deg);
+
+  .project {
+      width: 45%; /* Ajusta a dos columnas en pantallas más anchas */
+      margin: 15px;
   }
+}
+
+@media (min-width: 1024px) {
+  .project {
+      width: 30%; /* Ajusta a tres columnas en pantallas aún más anchas */
+  }
+}
+
+
+
+
+/* PIE DE PAGINA */
+
+
+.antepie{
+  display:flex;
+ 
+}
+
+.pie{
+
+   
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: auto;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    margin: auto;
+
+}
+
+
+.contactos, li{
+  list-style: none;
+  display: inline;
+  margin: 5px;
+  padding: 9px;
+
+}
+
+.correo{
+  width: 40px;
+}
+
+.correo1{
+  width: 90px;
+}
+
+/* CABECERA */
+
+.navbar{
+  background:#1e1e1d;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+.nav_logo{
+  font-weight: bold;
+  font-size: 30px;
+  margin: 15px;
+  color: orangered;
+}
+.nav_items a{
+  margin: 15px;
+  color: rgb(241, 236, 234);
+  position: relative;
+  text-decoration: none;
+}
+.nav_toggle{
+  display: none;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: #db6816;
+}
+
+.principal{
+  background: gray;
+  
+}
+
+.proyectos{
+  background: gray;
+}
+
+
+
+/* DISEÑO RESPONSIVE */
+@media (max-width: 768px) {
+  .nav_items{
+      position: absolute;
+      top: 60px;
+      left: 0;
+      background: rgb(255, 128, 0);
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: -webkit-fill-available;        
+      transform: translateX(-100%);
+      transition: 0.3s ease all;
+  }
+  .nav_items.open{
+      transform: translateX(0) !important
+  }
+  .nav_toggle{
+      display: flex !important;
+      flex-direction: column;                
+      margin: 15px;
+  }
+  .nav_toggle span{
+      width: 30px;
+      height: 4px;
+      background: white;
+      margin-bottom: 5px;
+      border-radius: 2px;             
+      transform-origin: 5px 0px;
+      transition: all 0.2s linear;
+  }
+  .nav_toggle.open > span{
+      transform: rotate(45deg) translate(0px, 0px);
+  }
+  .nav_toggle.open > span:nth-child(2){
+      display: none;
+  }
+  .nav_toggle.open > span:nth-child(3){
+      transform: rotate(-45deg) translate(-5px, 1px);
+  }
+}
+
+.quienSoy{
+  width: calc(100% - 80px);
 }
