--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
+/*body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Montserrat', 'Lato'
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+  }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Montserrat' 'Courier New',
     monospace;
+}*/
+
+/*@font-face {
+  font-family: Montserrat;
+  src: url('./fonts/Montserrat/Montserrat-Regular.ttf');
+}
+
+@font-face {
+  font-family: Lato;
+  src: url('./fonts/Montserrat/Lato-Black.ttf');
+}*/
+/*root{
+ background: white;
+}*/
+
+body{
+  margin: 0;
 }
