--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,22 @@ code {
  background: white;
 }*/
 
-body{
+.body{
   margin: 0;
 }
+
+/*<uniquifier>: Use a unique and descriptive class name
+<weight>: Use a value from 100 to 900*/
+
+/*.montserrat-<uniquifier> {
+  font-family: "Montserrat", serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}*/
+
+/**{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}*/
