--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,62 @@
 
 
 body{
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-  color: #333;
- /* background-color: #f4f4f4;*/
- background: linear-gradient(to bottom right, rgb(33, 32, 32), rgb(83, 80, 80)); 
+ 
+  font-family: "Montserrat", serif;
   margin: 0;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  /*padding: 20px;*/
-  
+  padding: 0;
+  background-color: #dbd5d5;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: 1fr auto;
  
   
 }
 
 .uno{
  
-  width: 80%;
-  margin: auto;
-  background: linear-gradient(to bottom right, rgb(253, 117, 13), rgb(235, 170, 95)); 
-    /*background: rgb(220, 217, 213);*/
-  padding: 30px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  margin-top: 35px;
-  border-radius: 18px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem;
+  background-color: #9faff5;
+  border-radius: 10px;
+  margin: 2rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  
 
+ 
 }
 
-.titulo{
-  color: white;
+
+
+
+/*.grow1 { flex-grow: 8; }*/
+
+.content {
+  flex: 2;
+  padding-right: 2rem;
+}
+
+
+/*.titulo{
+  color: rgb(136, 228, 15);
   font-size: 50px;
   font-style: italic;
   writing-mode: horizontal-tb;
   border-block-end: 5px dashed blue;
  
  
-}
+}*/
+
+/*.web{
+  color: rgb(123, 194, 29);
+  font-size: 50px;
+  font-style: italic;
+  writing-mode: horizontal-tb;
+  border-block-end: 2px dashed blue;
+}*/
+
 
 .titulo1{
   color: #f0461c;
@@ -46,6 +64,14 @@ body{
   font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
   margin-top: 70px;
 
+}
+
+
+
+
+hr{
+  color: #f11717;
+  margin-left: 45px;
 }
 
 .titulo2 {
@@ -58,12 +84,15 @@ body{
 }
  h1{
   font-size: 50px;
-  background: linear-gradient(#1497be, #821cf0);
-  color: transparent;
+  /*background: linear-gradient(#1497be, #821cf0);
+  color: transparent;*/
+  color: #0a0909;
   background-clip: text;
   -webkit-background-clip: text;
   -moz-background-clip: text;
   animation: text 5s linear infinite;
+  margin-left: 40px;
+  margin-top: 100px ;
  }
 
  @keyframes text{
@@ -76,39 +105,79 @@ body{
   }
  }
 
- h2{
+ p{
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 25px;
-  color: rgb(231, 231, 212);
- }
-
-h2, h3, h1{
-  
-  font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
-}
-
-h3{
+  margin-left: 45px;
+  margin-right: 35px;
   color: #f1f1f8;
-  font-size: 20px;
-  margin-top: 95px;
-}
-
-
-
-
-.imagen1{
-  width: 130px;
-  height: 130px;
-  border-radius: 50%;
-  margin: 20px auto;
-  display: block;
-  border: 2px solid #e1850b;
+  font-size: 30px;
  
+}
+
+
+
+
+
+
+/*.imagen1{
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  margin-right: 20px;
+  display: block;
+  border: 2px dashed #420633;
+  margin-top: 45px;
+  margin-left: 45px;
+
+
+}*/
+
+.imagen {
+  flex: 1;
+  max-width: 300px;
+  display: flex;
+  justify-content: center;
+  margin-right: 30px;
+  box-shadow: 18px 8px 8px 0px rgba(231, 16, 106, 0.3);
   
+}
+
+/* Imagen responsive */
+.imagen img {
+ width: 90%;
+ height: auto;
+ 
+ border: 2px solid rgb(100, 98, 98);
+
+ 
+ 
+}
+
+.web {
+  font-size: 3rem;
+  margin-left: 50px;
+  margin-top: 10px;
+  color:#e0e0da;
+  font-family: "Montserrat", serif;
+  font-optical-sizing: auto;
+  font-weight: 900;
+  text-shadow: 20px 15px 7px rgb(173, 36, 105);
+  text-align: center;
 
 }
 
 
+
+.dos{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem;
+  background: #d83acb;
+  border-radius: 10px;
+  margin: 2rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
 
 /* QUIEN SOY */
@@ -117,7 +186,7 @@ h3{
     margin: 0 auto;
     padding: 0 20px;
 
-   /*background: rgb(198, 192, 192);*/
+   background: rgb(198, 192, 192);
     border-radius: 10px;
     padding: 40px;
      
@@ -132,12 +201,14 @@ h3{
   
   width: 80%;
   margin: auto;
- color: rgb(228, 234, 238);
- font-size: 30px;
+  color: rgb(235, 245, 245);
+  font-size: 30px;
   padding: 30px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-
+  box-shadow: 0 0 10px rgba(8, 8, 8, 8);
+  background: #d83acb;
   margin-top: 15px;
+  text-align: justify;
+  border-radius: 10px;
    
 }
 
@@ -151,7 +222,7 @@ h3{
   border-radius: 35px 0px 35px 0px; 
   -moz-border-radius: 35px 0px 35px 0px; 
   -webkit-border-radius: 35px 0px 35px 0px; 
-  border: 2px solid #a8a8ab;
+  border: 2px solid #070788;
   margin-left: 10%;
   margin-top: 20px;
 }
@@ -167,25 +238,28 @@ h3{
   flex-direction: column;
   align-items: center;
   padding: 20px;
+  background: #e970cb;
+  
 }
 
 .projetTitulo{
  margin-left: 80px;
  padding: 35px;
- color: bisque;
- font-size: 30px;
+ color: rgb(199, 15, 159);
+ font-size: 40px;
 
 
 }
 
 /* Estilo base para cada proyecto */
 .project {
-  border: 2px solid #007BFF;
+  border: 8px solid #007BFF;
   border-radius: 8px;
   padding: 20px;
   margin: 10px;
   width: 90%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  justify-content: center;
 }
 
 .titProyect{
@@ -200,18 +274,23 @@ h3{
 }
 
 .project p {
-  color: #fbf3f3;
+  color: #f5eeee;
+  text-align: justify;
 }
 
-.project-image {
-  width: 100%;
-  height: auto;
-  border-radius: 5px;
+.imagenProyect {
+  width: 350px;
+  height: 350px;
+  border-radius: 20px;
+  box-shadow: #333;
 }
 
 .ref a{
   color: chartreuse;
 }
+
+
+
 
 
 
@@ -243,7 +322,7 @@ h3{
 
 .antepie{
   display:flex;
- 
+  margin-top: auto;
 }
 
 .pie{
@@ -292,11 +371,13 @@ h3{
   font-weight: bold;
   font-size: 30px;
   margin: 15px;
-  color: orangered;
+  color: rgb(38, 0, 255);
+  padding: 15px;
+
 }
 .nav_items a{
   margin: 15px;
-  color: rgb(241, 236, 234);
+  color: rgb(127, 173, 233);
   position: relative;
   text-decoration: none;
 }
@@ -306,7 +387,7 @@ h3{
 
 a:hover {
   text-decoration: underline;
-  color: #db6816;
+  color: #d83acb;
 }
 
 .principal{
@@ -321,12 +402,44 @@ a:hover {
 
 
 /* DISEÑO RESPONSIVE */
+
+/* Inicio*/
+
+
+@media (max-width: 768px) {
+  .uno {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .content {
+    padding-right: 0;
+    margin-bottom: 1rem;
+  }
+
+  .image {
+    max-width: 100%;
+  }
+
+  .web {
+    font-size: 1.5rem;
+  }
+
+  .dos {
+    flex-direction: column;
+    text-align: center;
+  }
+
+}
+
+
+
 @media (max-width: 768px) {
   .nav_items{
       position: absolute;
       top: 60px;
       left: 0;
-      background: rgb(255, 128, 0);
+      background: rgb(207, 102, 151);
       display: flex;
       flex-direction: column;
       width: 100%;
